[tool.poetry]
name = "course-work-4-1"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya-katkov-95@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
